--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <title>Flask Demo</title>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Import the Plotly library. Note that this has to 
          happen before we importa any code that uses Plotly. -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
     <!-- Import the D3 library. Note that this has to happen 
     before we import any code that uses D3. -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
-
     <!-- Import some CSS, just to show how it's done. -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css"></link>
 </head>
 
 <body>
+    <div class="container">
+    <div class="row">
+    <div class="col-md-12 jumbotron text-center">
     <h1>This is index.html</h1>
-
+    </div>
+    </div>        
     <h2>This is our test page</h2>
 
     <!-- Placeholder for a plot -->
-    <div id="plot"></div>
+    <div class="col-lg-6">
+        <div id="map"></div>
+      </div>
+      <div class="col-md-5">
+        <div id="line"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="cloropleth"></div>
+      </div>
+    </div>
+  </div>
 
     <!-- Import the main JavaScript code. -->
     <script type="text/javascript" src="static/js/main.js"></script>
