--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <title>Flask Demo</title>
+    <title>Elections</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Import the Plotly library. Note that this has to 
          happen before we importa any code that uses Plotly. -->
@@ -14,14 +12,17 @@
     before we import any code that uses D3. -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <!-- Import some CSS, just to show how it's done. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/css/style.css"></link>
 </head>
 
 <body>
     <div class="container">
     <div class="row">
-    <div class="col-md-12 jumbotron text-center">
-    <h1>This is index.html</h1>
+      <div class="col-lg-7 col-md-12">
+        <div class="box" style="padding-bottom: 25px;">
+        <h1>This is index.html</h1>
     </div>
     </div>        
     <h2>This is our test page</h2>
