updated html and css

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,44 +3,61 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Elections</title>
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+     <!-- Import some CSS, just to show how it's done. -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css"></link>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Elections</title>
     <!-- Import the Plotly library. Note that this has to 
          happen before we importa any code that uses Plotly. -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- Import the D3 library. Note that this has to happen 
     before we import any code that uses D3. -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <!-- Import some CSS, just to show how it's done. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css"></link>
+    
 </head>
 
 <body>
-    <div class="container">
-    <div class="row">
-      <div class="col-lg-7 col-md-12">
-        <div class="box" style="padding-bottom: 25px;">
-        <h1>This is index.html</h1>
-    </div>
-    </div>        
-    <h2>This is our test page</h2>
+    <div class="container-fluid">
+      <!-- The div for our map -->
+      <div class="row">
+        <div class="col-sm-6 col-md-6">
+          <div id="map"></div>
+            <div class="info"></div>
+            <div id="range-slider-1"></div>
+            <div class="leaflet-top leaflet-right"></div>
+            <div class="info leaflet-control"></div>
+        </div>
 
-    <!-- Placeholder for a plot -->
-    <div class="col-lg-6">
-        <div id="map"></div>
+        <div class="col-md-6">
+          <h2>To use this dashboard, select the election year in the map and then click on a state.</h2>
+            <!-- <div class="about">
+            <a href="/about">Project Team Information</a> -->
+          </div>
+          <div class="text1 text-center"></div>
+          <div class="text2 text-center"></div>
+        </div>
       </div>
-      <div class="col-md-5">
-        <div id="line"></div>
-      </div>
-    </div>
+
+    <!-- <h4>This is our test page</h4> -->
+
+    <!-- The div for line chart -->
     <div class="row">
-      <div class="col-md-12">
-        <div id="cloropleth"></div>
+      <div class="col-md-6">
+        <div id="line">
+          <div id="chart"></div>
+        </div>  
+      </div>
+      <div class="col-md-6">
+        <div id="tbd">
+          <div id="charttbd"></div>
+        </div>
       </div>
     </div>
-  </div>
+  </div>  
 
     <!-- Import the main JavaScript code. -->
     <script type="text/javascript" src="static/js/main.js"></script>
