--- a/templates/index.html
+++ b/templates/index.html
@@ -33,16 +33,18 @@
         </div>
 
         <div class="col-md-6">
-          <h2>To use this dashboard, select the election year in the map and then click on a state.</h2>
+          <h2 class="text-center">To use this dashboard, select the election year in the map and then click on a state.</h2>
             <!-- <div class="about">
             <a href="/about">Project Team Information</a> -->
           </div>
           <div class="text1 text-center"></div>
           <div class="text2 text-center"></div>
         </div>
-      </div>
-
-    <!-- <h4>This is our test page</h4> -->
+       </div>
+     <!-- Test page text div -->
+      <div class="col-md-6">
+    <h4 class="text-center">This is our test page</h4>
+    </div>
 
     <!-- The div for line chart -->
     <div class="row">
