--- a/templates/index.html
+++ b/templates/index.html
@@ -3,46 +3,86 @@
 
 <head>
     <meta charset="UTF-8">
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-    <title>Flask Demo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+     <!-- Import some CSS, just to show how it's done. -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Elections</title>
     <!-- Import the Plotly library. Note that this has to 
          happen before we importa any code that uses Plotly. -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- Import the D3 library. Note that this has to happen 
     before we import any code that uses D3. -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <!-- Import some CSS, just to show how it's done. -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css"></link>
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin="" />
+    
 </head>
 
 <body>
-    <div class="container">
-    <div class="row">
-    <div class="col-md-12 jumbotron text-center">
-    <h1>This is index.html</h1>
-    </div>
-    </div>        
-    <h2>This is our test page</h2>
+    <div class="container-fluid">
+      <!-- The div for our map -->
+      <div class="row">
+        <div class="col-sm-6 col-md-6">
+          <div id="map"></div>
+          <select id="selDataset">
+            <option value="2000">2000</option>
+            <option value="2004">2004</option>
+            <option value="2008">2008</option>
+            <option value="2012">2012</option>
+            <option value="2016">2016</option>
+          </select>
+          <!-- Leaflet JS  -->
+        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script>
+            <div class="info"></div>
+            <div id="range-slider-1"></div>
+            <div class="leaflet-top leaflet-right"></div>
+            <div class="info leaflet-control"></div>
+        </div>
 
-    <!-- Placeholder for a plot -->
-    <div class="col-lg-6">
-        <div id="map"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="line"></div>
-      </div>
+        <div class="col-md-6">
+          <h2 class="text-center">To use this dashboard, select the election year in the map and then click on a state.</h2>
+            <!-- <div class="about">
+            <a href="/about">Project Team Information</a> -->
+          </div>
+          <div class="text1 text-center"></div>
+          <div class="text2 text-center"></div>
+        </div>
+     <!-- Test page text div -->
+      <div class="col-md-6">
+    <h4 class="text-center">This is our test page</h4>
     </div>
+
+    <!-- The div for line chart -->
     <div class="row">
-      <div class="col-md-12">
-        <div id="cloropleth"></div>
+      <div class="col-md-6">
+        <div id="line">
+          <div id="chart"></div>
+        </div>  
+      </div>
+      <div class="col-md-6">
+        <div id="countymap">
+          <!-- Leaflet JS  -->
+        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script>
+        </div>
       </div>
     </div>
-  </div>
+  </div>  
 
     <!-- Import the main JavaScript code. -->
-    <script type="text/javascript" src="static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/config.js"></script> 
+    <script type="text/javascript" src="/static/js/us-states.js"></script> 
+    <script type="text/javascript" src="/static/js/us-counties.js"></script> 
+    <script type="text/javascript" src="/static/js/main.js"></script>
 
 </body>
 
