--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,19 @@
-
 body {
-
     padding: 0;
     margin: 0;
+    background-color:#F4F4F4;
   } 
-
-
   #body,
   html {
     height: 100%;
   }
-  #map {width:100%;height:600px;}
-  
-  h1 {
-    text-align: center;
+  #map {width:100%;height:600px;
+  }
+  h4 {
+    font-family: 'Lucida Sans', 'extrabold';
+  }
+  p {
+    font-family: 'Lucida Sans';
   }
   .info {
     padding: 6px 8px;
@@ -38,5 +38,10 @@ body {
     margin-right: 8px;
     opacity: 0.7;
 }
-
-
+.nav-link:hover {
+  color: blue;
+}
+.nav-link {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: black;
+}
