--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+   
      <!-- Import some CSS, just to show how it's done. -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
     <title>Elections</title>
     <!-- Import the Plotly library. Note that this has to 
@@ -24,17 +23,31 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
-   
-</head>
+   </head>
 
 <body>
+ <!-- Navigation bar -->
+<div class="navigation">
+  <nav class="navbar navbar-expand-sm navbar-light">
+       <a class="navbar-nav mr-auto"></a>
+             <a class="nav-link" href="/about.html">About</a>
+  </nav>
+</div>
+<!-- Stop Navagation-->  
 
-      <header class="header">
-      <h2 class="text-center">To use this dashboard, select the election year in the map and then click on a state.</h2>
-    </header>
-
-    <div class="container-fluid">
+  <header>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12  text-center">
+        <h4 class="text-center"> US Election Results 2000 - 2016</h4>
+        <p class="text-center"> To interact with this dashboard, select the election year on the map and click on a state.  For more details, hover over a state on the map or a point on the line chart.</p>
+      </div>
+  </div>
+  </div>
+  </header>
+   
       <!-- The div for our map -->
+      <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 col-md-6">
           <div id="map"></div>
@@ -46,6 +59,7 @@
             <option value="2012">2012</option>
             <option value="2016">2016</option>
           </select>
+         
           <!-- Leaflet JS  -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
@@ -55,19 +69,11 @@
             <div class="leaflet-top leaflet-right"></div>
             <div class="info leaflet-control"></div>
         </div>
-
-        <div class="col-md-6">
-          <h2 class="text-center">To use this dashboard, select the election year in the map and then click on a state.</h2>
-            <!-- <div class="about">
-            <a href="/about">Project Team Information</a> -->
-          </div>
-          <div class="text1 text-center"></div>
-          <div class="text2 text-center"></div>
+      
+        <!-- where text summary belongs -->
+        <div class="text1 text-center" id="yearstate"></div>
+          <div class="text2 text-center" id= "prctwonloss"></div>
         </div>
-     <!-- Test page text div -->
-      <div class="col-md-6">
-    <h4 class="text-center">This is our test page</h4>
-    </div>
 
     <!-- The div for line chart -->
     <div class="row">
@@ -78,6 +84,7 @@
       </div>
       <div class="col-md-6">
         <div id="countymap">
+    
           <!-- Leaflet JS  -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
@@ -86,12 +93,14 @@
       </div>
     </div>
   </div>  
-
+  
     <!-- Import the main JavaScript code. -->
-    <script type="text/javascript" src="/static/js/config.js"></script> 
+    <script type="text/javascript" src="/static/js/config.js"></script>
+    <script type="text/javascript" src="/static/js/logic.js"></script> 
     <script type="text/javascript" src="/static/js/us-states.js"></script> 
     <script type="text/javascript" src="/static/js/us-counties.js"></script> 
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/mainmh.js"></script>
 
 
 </body>
