--- a/templates/about.html
+++ b/templates/about.html
@@ -39,11 +39,11 @@
     <div class="container">
       <h1 class="display- text-center" >WELCOME</h1>
       <p class="lead"></p>
-      <p class="lead">Our mission was to provide an interactive dashboard visualiznig US Presidential Elections from 2000 - 2016.  
-        We have visualized results for each state and county, indicating the winning party by color for the participating territories.  
-        When you hoover over a state, the results for each party are displayed along with the details of their win or loss by percentage.  
-        When you click on a state, you will be provided a brief summary along with a detailed view of the reults for each county.  The data
-        was pulled from Harvard's Dataverse Repository and the Exploratory websites.</p>  
+      <p class="lead">Our mission was to provide an interactive dashboard visualizing US Presidential Elections from 2000 - 2016. 
+          We have visualized results for each state and county, indicating the winning party by color for the participating territories. 
+          When you hoover over a state, the results for each party are displayed along with the details of their win or loss by percentage. 
+          When you click on a state, you will be provided a summary along with a detailed view of the results for each county. 
+          The data was pulled from Harvard's Dataverse Repository and the Exploratory websites.</p>  
 
 
     </div>
