Added county map

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
+    <link rel="stylesheet" type="text/css" href="/static/css/L.Control.ZoomBar.css"/>
    
 </head>
 
@@ -46,10 +47,14 @@
             <option value="2012">2012</option>
             <option value="2016">2016</option>
           </select>
+          <div id="StateChoice">
+
+          </div>
           <!-- Leaflet JS  -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
+        <script type="text/javascript" src="/static/js/L.Control.ZoomBar.js"></script>
             <div class="info"></div>
             <div id="range-slider-1"></div>
             <div class="leaflet-top leaflet-right"></div>
@@ -82,6 +87,7 @@
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
+        <script type="text/javascript" src="/static/js/L.Control.ZoomBar.js"></script>
         </div>
       </div>
     </div>
@@ -92,6 +98,7 @@
     <script type="text/javascript" src="/static/js/us-states.js"></script> 
     <script type="text/javascript" src="/static/js/us-counties.js"></script> 
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/mainmh.js"></script>
 
 
 </body>
