--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,22 +10,34 @@ body {
   html {
     height: 100%;
   }
-  #map {width:100%;height:600px;}
-  
+  #map {width:100%;height:280px;}
+  #countymap {width:100%;height:280px;}
   h1 {
     text-align: center;
   }
   .info {
     padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
+    font: 10px/12px Arial, Helvetica, sans-serif;
     background: white;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
 }
-.info h4 {
+.info h6 {
     margin: 0 0 5px;
     color: #777;
+}
+.countyinfo {
+  padding: 6px 8px;
+  font: 10px/12px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.countyinfo h6 {
+  margin: 0 0 5px;
+  color: #777;
 }
 .legend {
     line-height: 18px;
