changes yto html

--- a/templates/about.html
+++ b/templates/about.html
@@ -30,7 +30,7 @@
  <!-- Navigation bar -->
   <nav class="navbar navbar-expand-sm navbar-light">
        <a class="navbar-nav mr-auto"></a>
-             <a class="nav-link" href="/index.html">Dashboard</a>
+             <a class="nav-link" href="/">Dashboard</a>
   </nav>
 
 
