updated css, logic and index

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
     <title>About</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static/icons/us-flag-152-8120.png"/> 
     <!-- Import the Plotly library. Note that this has to 
          happen before we importa any code that uses Plotly. -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
