--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,29 +1,48 @@
 body {
   padding: 0;
   margin: 0;
-  background-color:#F4F4F4;
+  background-color:#ffffff;
 } 
 #body,
 html {
   height: 100%;
 }
-#map {width:100%;height:600px;
+.text1 {font-family: 'Lucida Sans'; font-size: smaller;
 }
-h4 {
-  font-family: 'Lucida Sans', 'extrabold';
+.text2 { font-family:'Lucida Sans'; text-transform: capitalize;
+}
+#map {width:100%; height:380px;
+}
+#chart {width: 100%; height:380px;
+}
+#countymap {width:100%; height:380px;}
+h2 {
+  font-family:'Lucida Sans'; font-size: large; 
 }
 p {
   font-family: 'Lucida Sans';
 }
 .info {
   padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
+  font: 10px/12px Arial, Helvetica, sans-serif;
   background: white;
   background: rgba(255,255,255,0.8);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 5px;
 }
-.info h4 {
+.info h6 {
+  margin: 0 0 5px;
+  color: #777;
+}
+.countyinfo {
+  padding: 6px 8px;
+  font: 10px/12px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.countyinfo h6 {
   margin: 0 0 5px;
   color: #777;
 }
