--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-   
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
    
      <!-- Import some CSS, just to show how it's done. -->
 
@@ -12,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
     <title>Elections</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static/icons/us-flag-152-8120.png"/> 
     <!-- Import the Plotly library. Note that this has to 
          happen before we importa any code that uses Plotly. -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
-   </head>
+    <link rel="stylesheet" type="text/css" href="/static/css/L.Control.ZoomBar.css"/>
+    
+</head>
 
 <body>
  <!-- Navigation bar -->
@@ -38,8 +40,8 @@
   <header>
   <div class="container">
     <div class="row">
-      <div class="col-sm-12  text-center">
-        <h4 class="text-center"> US Election Results 2000 - 2016</h4>
+      <div class="col-xsm-12  text-center">
+        <h2 class="text-center"> US Election Results <br> 2000 - 2016</h2>
         <p class="text-center"> To interact with this dashboard, select the election year on the map and click on a state.  For more details, hover over a state on the map or a point on the line chart.</p>
       </div>
   </div>
@@ -49,7 +51,7 @@
       <!-- The div for our map -->
       <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6 col-md-6">
+        <div class="col-md-6">
           <div id="map"></div>
 
           <select id="selDataset">
@@ -59,40 +61,40 @@
             <option value="2012">2012</option>
             <option value="2016">2016</option>
           </select>
-         
+          <div id="StateChoice">
+
+          </div>
           <!-- Leaflet JS  -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
+        <script type="text/javascript" src="/static/js/L.Control.ZoomBar.js"></script>
             <div class="info"></div>
-            <div id="range-slider-1"></div>
-            <div class="leaflet-top leaflet-right"></div>
-            <div class="info leaflet-control"></div>
-        </div>
+          </div>
       
         <!-- where text summary belongs -->
-        <div class="text1 text-center" id="yearstate"></div>
+          <div class="col-md-6">
+          <div class="text1 text-center" id="yearstate"></div>
           <div class="text2 text-center" id= "prctwonloss"></div>
         </div>
 
     <!-- The div for line chart -->
     <div class="row">
-      <div class="col-md-6">
-        <div id="line">
+      <div class="col-sm-6">
           <div id="chart"></div>
         </div>  
       </div>
-      <div class="col-md-6">
-        <div id="countymap">
+      <div class="col-sm-6">
+        <div id="countymap"></div>
     
           <!-- Leaflet JS  -->
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
+        <script type="text/javascript" src="/static/js/L.Control.ZoomBar.js"></script>
         </div>
       </div>
-    </div>
-  </div>  
+    
   
     <!-- Import the main JavaScript code. -->
     <script type="text/javascript" src="/static/js/config.js"></script>
