Changed format for final presentation

--- a/templates/about.html
+++ b/templates/about.html
@@ -40,11 +40,9 @@
     <div class="container">
       <h1 class="display- text-center" >WELCOME</h1>
       <p class="lead"></p>
-      <p class="lead">Our mission was to provide an interactive dashboard visualizing US Presidential Elections from 2000 - 2016. 
-          We have visualized results for each state and county, indicating the winning party by color for the participating territories. 
-          When you hoover over a state, the results for each party are displayed along with the details of their win or loss by percentage. 
-          When you click on a state, you will be provided a summary along with a detailed view of the results for each county. The data was pulled from Harvard's Dataverse Repository and the Exploratory websites.</p>  
-
+      <p class="lead">Our mission is to visualize the US Presidential Election results from 2000 – 2016 through an interactive dashboard. The user can navigate the nation map by using a dropdown menu to display the election results numerically for each state by election year, and the map adapts a color-coded choropleth scheme proportionate to the vote counts for each party. In addition, the user can click on a state to further analyze election results by county. Finally, a line chart summarizes the total vote counts for each party by election year.
+        <br> <br>  *The data in our interactive dashboard comes from Harvard's Dataverse Repository and the Exploratory GeoJson maps, files & data site.</p>  
+  
     </div>
   </div>
 
