--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color:#ffffff;
+  background-color:rgb(255, 255, 255); 
 } 
 #body,
 html {
@@ -24,6 +24,18 @@ p {
   font-family: 'Lucida Sans';
 }
 .info {
+  padding: 6px 8px;
+  font: 10px/12px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.info h6 {
+  margin: 0 0 5px;
+  color: #777;
+}
+.countyinfo {
   padding: 6px 8px;
   font: 10px/12px Arial, Helvetica, sans-serif;
   background: white;
